--- a/hubblestack_nova_profiles/cis/ubuntu-1604-level-1-scored-v1-1-0.yaml
+++ b/hubblestack_nova_profiles/cis/ubuntu-1604-level-1-scored-v1-1-0.yaml
@@ -1,5 +1,5 @@
 ####################
-# EBOSS OS Hhardening profile for Ubuntu OS Hardening as per the eBay standards explained at https://wiki.vip.corp.ebay.com/display/IS/Ubuntu+OS+Hardening
+# EBOSS OS 
 # Updated on 04/03/19
 #####################
 
